--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,4 +12,4 @@ jobs:
         uses: actions/checkout@v4
  
       - name: Build project
-        run: echo "Building project.."
+        run: echo "Building project...."
